[gd_scene load_steps=24 format=3 uid="uid://c1chhpmxmfbcs"]

[ext_resource type="Script" path="res://Escenas/Maingame/escenario_ganador.gd" id="1_b6hkr"]
[ext_resource type="Texture2D" uid="uid://phm2xg5aruw2" path="res://Sprites/Fondos/cielo png.png" id="2_msn6k"]
[ext_resource type="Texture2D" uid="uid://btq4pabtvb268" path="res://Sprites/Fondos/fondo0.png" id="3_sq4wr"]
[ext_resource type="Texture2D" uid="uid://c1vd6327w5erl" path="res://Sprites/QuickTimeEvent/telon.png" id="4_68s83"]
[ext_resource type="Texture2D" uid="uid://dpvoi6spn47il" path="res://Sprites/Fondos/decor.png" id="4_u307e"]
[ext_resource type="AudioStream" uid="uid://ddshnuc57y832" path="res://SFX/sonidosNoImplementadosSebastian/sonidoAlGanar2.mp3" id="5_y5mei"]
[ext_resource type="Texture2D" uid="uid://da3s274bbp3f" path="res://Sprites/Fondos/cartel.png" id="6_36y4g"]
[ext_resource type="Texture2D" uid="uid://68c3772giv2y" path="res://Sprites/Fondos/stage.png" id="7_0iutj"]
[ext_resource type="Texture2D" uid="uid://pwdu2te4is4b" path="res://Sprites/Comidas/5Pla.png" id="7_t76n8"]
[ext_resource type="Texture2D" uid="uid://epturoc0id2" path="res://Sprites/Fondos/mesa.png" id="8_d8atp"]
[ext_resource type="Texture2D" uid="uid://0bvht6hr3spr" path="res://Sprites/Comidas/2Pla.png" id="8_vjk00"]
[ext_resource type="Theme" uid="uid://v28k7lh33uhi" path="res://Escenas/Maingame/themeNameTags.tres" id="9_b1d82"]
[ext_resource type="Texture2D" uid="uid://ck2pho23ifqed" path="res://Sprites/EscenaGanador/play again.png" id="9_dkl1p"]
[ext_resource type="Texture2D" uid="uid://coegn5p0gvs3r" path="res://Sprites/Comidas/4Pla.png" id="9_krila"]
[ext_resource type="Texture2D" uid="uid://dx7uis8jda7ap" path="res://Sprites/Comidas/1Pla.png" id="9_lshxh"]
[ext_resource type="Texture2D" uid="uid://cirw8axeuwckb" path="res://Sprites/Comidas/3Pla.png" id="10_c287q"]
[ext_resource type="SpriteFrames" uid="uid://difwnevqurat5" path="res://RecursosGatos/Maingame_Miguel.tres" id="11_8mbk4"]
[ext_resource type="SpriteFrames" uid="uid://cyaxk0781m4d7" path="res://RecursosGatos/Maingame_Timmy.tres" id="12_5qmkn"]
[ext_resource type="Texture2D" uid="uid://cn18euyk0fcym" path="res://Sprites/QuickTimeEvent/winner.png" id="16_l8rl6"]
[ext_resource type="AudioStream" uid="uid://cp23rocgful7w" path="res://Musica/tfcf_winner.mp3" id="47_0luo8"]

[sub_resource type="Animation" id="Animation_2qs12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Telon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(688, 386)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Telon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b6irt"]
resource_name = "mostrar_ganador"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Telon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(688, 386), Vector2(688, -470)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Telon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.3, 2.3, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.8, 1.0, 1.0, 0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.7],
"method": &"cheer"
}, {
"args": [0.15],
"method": &"cheer"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Button:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lp07"]
_data = {
"RESET": SubResource("Animation_2qs12"),
"mostrar_ganador": SubResource("Animation_b6irt")
}

[node name="EscenarioGanador" type="Node2D"]
script = ExtResource("1_b6hkr")

[node name="Bg" type="CanvasGroup" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Cielo" type="Sprite2D" parent="Bg"]
scale = Vector2(0.712, 0.712)
texture = ExtResource("2_msn6k")
centered = false

[node name="Fondo" type="Sprite2D" parent="Bg"]
scale = Vector2(0.712, 0.712)
texture = ExtResource("3_sq4wr")
centered = false

[node name="Deco" type="Sprite2D" parent="Bg"]
scale = Vector2(0.712, 0.712)
texture = ExtResource("4_u307e")
centered = false

[node name="Stage" type="Sprite2D" parent="Bg"]
scale = Vector2(0.712, 0.712)
texture = ExtResource("7_0iutj")
centered = false

[node name="Cartel" type="Sprite2D" parent="Bg"]
scale = Vector2(0.712, 0.712)
texture = ExtResource("6_36y4g")
centered = false

[node name="Winner" type="Sprite2D" parent="Bg"]
position = Vector2(683, 110)
scale = Vector2(0.62, 0.649)
texture = ExtResource("16_l8rl6")

[node name="Telon" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(688, 386)
scale = Vector2(0.73, 0.73)
texture = ExtResource("4_68s83")

[node name="Button" type="TextureButton" parent="."]
visible = false
z_index = 5
offset_left = 460.0
offset_top = 560.0
offset_right = 1636.0
offset_bottom = 880.0
scale = Vector2(0.375, 0.375)
texture_normal = ExtResource("9_dkl1p")
texture_pressed = ExtResource("9_dkl1p")
texture_hover = ExtResource("9_dkl1p")
texture_focused = ExtResource("9_dkl1p")

[node name="Gato1" type="AnimatedSprite2D" parent="."]
z_as_relative = false
position = Vector2(688, 346)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("11_8mbk4")
animation = &"begin_derrota"

[node name="Gato2" type="AnimatedSprite2D" parent="."]
z_as_relative = false
position = Vector2(1016, 382)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("12_5qmkn")
animation = &"begin_derrota"

[node name="Platos" type="CanvasGroup" parent="."]
position = Vector2(460, 560)
scale = Vector2(0.375, 0.375)

[node name="platos3" type="Sprite2D" parent="Platos"]
position = Vector2(-133.333, -610.667)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("8_vjk00")

[node name="platos5" type="Sprite2D" parent="Platos"]
position = Vector2(1130.67, -608)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("9_lshxh")

[node name="platos6" type="Sprite2D" parent="Platos"]
position = Vector2(1018.67, -608)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("8_vjk00")

[node name="platos" type="Sprite2D" parent="Platos"]
position = Vector2(-29.3333, -610.667)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("9_krila")

[node name="platos4" type="Sprite2D" parent="Platos"]
position = Vector2(197.333, -613.333)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("10_c287q")

[node name="platos2" type="Sprite2D" parent="Platos"]
position = Vector2(88, -618.667)
scale = Vector2(2.13333, 2.13333)
texture = ExtResource("7_t76n8")

[node name="Mesa" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-9, 125)
scale = Vector2(0.712, 0.6)
texture = ExtResource("8_d8atp")
centered = false

[node name="Label" type="Label" parent="."]
visible = false
z_index = 7
offset_left = 500.0
offset_top = 333.0
offset_right = 1358.0
offset_bottom = 512.0
theme = ExtResource("9_b1d82")
theme_override_font_sizes/font_size = 64
text = "xasd"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 0
visible_characters = 0
visible_ratio = 0.16

[node name="LabelNombre" type="Label" parent="."]
z_index = 1
z_as_relative = false
offset_left = 420.0
offset_top = 478.0
offset_right = 930.0
offset_bottom = 556.0
theme = ExtResource("9_b1d82")
theme_override_font_sizes/font_size = 32
text = "NOMBRE LARGO QUE COLOCO"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1lp07")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_y5mei")
max_polyphony = 2
bus = &"SFX"

[node name="WinnerPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("47_0luo8")
volume_db = -2.5
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="Gato1" to="." method="_on_gato_1_animation_finished"]
[connection signal="animation_finished" from="Gato2" to="." method="_on_gato_2_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="WinnerPlayer" to="." method="_on_audio_stream_player_finished"]
